--- a/motorlist2.html
+++ b/motorlist2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -85,14 +84,14 @@ th, td {
 /* STICKY HEADERS */
 thead tr:nth-child(1) th {
   position: sticky;
-  top: 56px; /* below blue header */
+  top: 56px;
   background: #003f88;
   color: white;
   z-index: 20;
 }
 thead tr:nth-child(2) th {
   position: sticky;
-  top: 92px; /* below first header row */
+  top: 92px;
   background: #eaf1ff;
   z-index: 15;
 }
@@ -102,14 +101,12 @@ tr:hover {
   cursor: pointer;
 }
 
-/* FILTER */
 .filter-row input {
   width: 100%;
   padding: 4px;
   font-size: 12px;
 }
 
-/* SECTION SEPARATOR (Column A blank) */
 .section-row {
   background: #dbe9ff !important;
   font-weight: 600;
@@ -123,7 +120,6 @@ tr:hover {
 
 <body>
 
-<!-- ===== HEADER ===== -->
 <div class="header-bar">
   <button onclick="goHome()">🏠</button>
   <button onclick="goBack()">🔁</button>
@@ -150,19 +146,25 @@ tr:hover {
 </div>
 
 <script>
-const SHEET_URL =
-  "https://docs.google.com/spreadsheets/d/13q1lrwYZ8RXHM6tQrod3dSJlC6DnEKwtAzpOdZNbwsg/gviz/tq" +
-  "?gid=791642192&tqx=out:json";
-
-/* Columns: A,B,C,E,F,H,I,J,K,L,M,N */
-const COLS = [0,1,2,4,5,7,8,9,10,11,12,13];
+// 🔥 FAST JSON SOURCE
+const JSON_URL =
+  "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/master/motors.json";
 
 async function loadMotors() {
-  const res = await fetch(SHEET_URL);
-  const txt = await res.text();
-  const json = JSON.parse(txt.substring(47, txt.length - 2));
+  const cache = localStorage.getItem("motorJSON");
+  let data;
 
-  const rows = json.table.rows;
+  if (cache) {
+    data = JSON.parse(cache);
+  } else {
+    const res = await fetch(JSON_URL);
+    data = await res.json();
+    localStorage.setItem("motorJSON", JSON.stringify(data));
+  }
+
+  const headers = data.headers;
+  const rows = data.rows;
+
   const headerRow = document.getElementById("headerRow");
   const filterRow = document.getElementById("filterRow");
   const tbody = document.querySelector("#motorTable tbody");
@@ -171,12 +173,10 @@ async function loadMotors() {
   filterRow.innerHTML = "";
   tbody.innerHTML = "";
 
-  /* ===== HEADERS FROM ROW 1 ===== */
-  const headerCells = rows[0].c;
-
-  COLS.forEach(i => {
+  /* ===== HEADERS ===== */
+  headers.forEach(h => {
     const th = document.createElement("th");
-    th.textContent = headerCells[i]?.v || "";
+    th.textContent = h;
     headerRow.appendChild(th);
 
     const fh = document.createElement("th");
@@ -184,26 +184,21 @@ async function loadMotors() {
     filterRow.appendChild(fh);
   });
 
-  /* ===== DATA ROWS (FROM ROW 2 ONWARDS) ===== */
-  rows.slice(0).forEach(r => {
-    const c = r.c || [];
-
-    // Validation: Column B must not be blank
-    if (!c[1]?.v) return;
+  /* ===== DATA ===== */
+  rows.forEach(r => {
+    if (!r[1]) return;
 
     const tr = document.createElement("tr");
+    if (!r[0]) tr.classList.add("section-row");
 
-    // Section separator if Column A blank
-    if (!c[0]?.v) tr.classList.add("section-row");
-
-    COLS.forEach(i => {
+    r.forEach(v => {
       const td = document.createElement("td");
-      td.textContent = c[i]?.v ?? "";
+      td.textContent = v ?? "";
       tr.appendChild(td);
     });
 
     tr.onclick = () => {
-      const id = `${c[1]?.v}-${c[2]?.v}`;
+      const id = r[1] + "-" + r[2];
       window.location.href =
         "https://08electricaldata.github.io/drive-viewer/index.html?id=" +
         encodeURIComponent(id);
@@ -215,7 +210,6 @@ async function loadMotors() {
   setupFilters();
 }
 
-/* ===== FILTER ===== */
 function setupFilters() {
   document.querySelectorAll(".filter-row input")
     .forEach((input, idx) => {
@@ -231,7 +225,6 @@ function setupFilters() {
     });
 }
 
-/* ===== EXPORT ===== */
 function exportExcel() {
   let csv = [];
   document.querySelectorAll("#motorTable tr").forEach(row => {
@@ -245,7 +238,6 @@ function exportExcel() {
   a.click();
 }
 
-/* ===== NAV ===== */
 function goHome() {
   window.location.href = "https://08electricaldata.github.io/";
 }
